--- a/SASS2/index.html
+++ b/SASS2/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <h1>Titulo</h1>
-    <p>alguma coisa</p>
+    
+    <p class="text-1 red-text">alguma coisa</p>
+    <p class="text-2 yellow-text">alguma coisa</p>
+    <p class="text-3 blue-text">alguma coisa</p>
+    <p class="text-4">alguma coisa</p>
+    <p class="text-5">alguma coisa</p>
+    
 </body>
 </html>
